--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-uRestExpress",
+  "name": "generator-urestexpress",
   "version": "1.0.0",
   "description": "Basic Express REST API for quick and easy start",
   "files": [
