--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "yeoman-generator": "2.0.0",
     "yosay": "^2.0.1"
   },
+  "repository": "https://github.com/vladpantea/generator-uRestExpress.git",
   "author": "Vlad Pantea",
   "license": "MIT"
 }
