--- a/src/templates/shared/package.json
+++ b/src/templates/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uRestExpress",
+  "name": "urestexpress",
   "version": "1.0.0",
   "description": "Basic Express REST API",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vlad Pantea",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
