--- a/src/templates/shared/package.json
+++ b/src/templates/shared/package.json
@@ -4,7 +4,8 @@
   "description": "Basic Express REST API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Vlad Pantea",
   "license": "MIT",
@@ -27,6 +28,7 @@
     "body-parser": "1.18.2",
     "dotenv": "4.0.0",
     "express": "4.15.4",
-    "helmet": "3.8.1"
+    "helmet": "3.8.1",
+    "di-containerx": "1.0.1"
   }
 }
